--- a/src/components/global/Layout/Layout.astro
+++ b/src/components/global/Layout/Layout.astro
@@ -160,6 +160,10 @@ const {
 
 		<script is:inline src="/registerSW.js"></script>
 		<link rel="manifest" href="/manifest.webmanifest" />
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
 	</head>
 	<body class="min-h-screen flex flex-col w-full overflow-x-hidden">
 		<main class="flex flex-1 flex-col h-[100%] w-full">
@@ -172,3 +176,28 @@ const {
 		</script>
 	</body>
 </html>
+
+<style>
+
+	    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+
+	body{
+/* From https://css.glass */
+background: rgb(255, 255, 255);
+
+/*
+
+background-image: url("/img/la-chica-de-piel-oscura-con-estilo-y-complacida-disfruta-de-la-musica-de-la-lista-de-reproduccion-de-motivacion-disfruta-del-tiempo-libre-para-escuchar-pistas-populares.jpg");
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center;
+font-family: "Plus Jakarta Sans", sans-serif;
+font-weight: 600;*/
+
+	}
+</style>
